# bookworm

./: .gitignore  Cargo.toml
src/: main.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/config/: constant.rs  mod.rs
src/model/: book.rs  mod.rs  schemas.rs
src/persistence/: connect.rs  errors.rs  mod.rs
src/persistence/actions/: mod.rs
src/persistence/actions/books/: mod.rs
src/persistence/repositories/: mod.rs
src/persistence/repositories/books/: create.rs  delete.rs  mod.rs  query.rs
src/persistence/repositories/bookshelf/: add_book.rs  create.rs  delete_book.rs  mod.rs  query.rs
src/persistence/repositories/tbr/: add_book.rs  delete_book.rs  mod.rs  query.rs
src/utils/: datetime.rs  log.rs  mod.rs  pretty_print.rs  test_utils.rs
