[package]
name = "bookworm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
directories = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
